2007-06-04 Peter Brett <peter@peter-b.co.uk>

	* src/g_rc.c: Replace deprecated Guile functions & macros.

	Replace deprecated SCM_STRINGP, SCM_INUM, SCM_INUMP & SCM_MAKINUM
	with recommended equivalents for Guile 1.8.

2007-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Updated version to 20070526 in prep for the next
        release.

2007-04-28 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/gettext.h, include/globals.h, include/Makefile.am,
	src/x_dialog.c, src/x_fileselect.c: Removed gettext.h header file
	and the few _( ) pairs to get rid of some warnings.  gattrib is
	not i18n and should not be using gettext.h for now.

	* src/s_toplevel.c: Removed some unused variable compiler warnings.

2007-04-21 Peter Clifton <pcjc2@cam.ac.uk>

	* src/x_dialog.c: Check return value of gdk_keyval_name() is non
	  NULL before attempting to match against it. Fixes bug #1692634.

2007-4-21  Stuart Brorson <sdb (AT) cloud9 (DOT) net>
	* src/x_window.c: Modify gattrib so it checks for design changes
	before quitting if user hits delete button on window.  Closes bug
	1704938 from Peter Brett.
	
2007-04-21 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* src/x_fileselect.c:
	 - Set the alternative button order for gtk dialogs 
	   (now with correct responses).
	 - Reverted the changes below. 
	   gtk_dialog_set_alternative_button_order should have the same
	   responses as the dialogs.
	 - Set the alternative button order for gtk dialogs.
	  This would allow to display the correct button order whatever
	  system is running this app. Fix for bug #1553483.
	
2007-04-17 21:16  Dan McMahill <danmc>

	* src/gattrib.c: remove /* within comment

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>

	Merge changes from noscreen branch

	2007-04-12 Peter Clifton <pcjc2@cam.ac.uk>

		* src/o_attrib.c: Replace incorrect use of world_get_complex_bounds()
		  with world_get_object_list_bounds().

2007-04-17 Peter Clifton <pcjc2@cam.ac.uk>
