@@ -211,6 +211,13 @@ then
    GLIB_LIBS=$GLIB24_LIBS
    GLIB_VERSION=`$PKG_CONFIG glib-2.0 --modversion`
 
+   # Search for gthread
+   PKG_CHECK_MODULES(GTHREAD, gthread-2.0, GTHREAD="yes", no_GTHREAD="yes")
+   if test "$GTHREAD" = "yes"
+   then
+       AC_DEFINE(HAVE_GTHREAD, 1, [If gthread support is installed, define this])
+   fi
+
 else
    GTK_VERSION=""
 fi
@@ -531,8 +538,8 @@ AM_GNU_GETTEXT
 AM_GNU_GETTEXT_VERSION([%INSTALLED_GETTEXT_VERSION%])
 
 # Finally create the final CFLAGS and LDFLAGS for use in the makefiles
-GSCHEM_CFLAGS="$LIBSTROKE_CFLAGS $LIBGEDA_CFLAGS"
-GSCHEM_LDFLAGS="$LIBSTROKE_LIBS $LIBGEDA_LIBS $GTK_LIBS $X_LDFLAGS $DMALLOC_LIBS" 
+GSCHEM_CFLAGS="$LIBSTROKE_CFLAGS $LIBGEDA_CFLAGS $GTHREAD_CFLAGS"
+GSCHEM_LDFLAGS="$LIBSTROKE_LIBS $LIBGEDA_LIBS $GTK_LIBS $X_LDFLAGS $DMALLOC_LIBS $GTHREAD_LIBS"
 
 # Makefile.in variable substitution
 AC_SUBST(GSCHEM_CFLAGS)
